WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201989
Refactoring: fix broken indentation in JSNonDestructibleProxy.h.
https://bugs.webkit.org/show_bug.cgi?id=201989
Summary
Refactoring: fix broken indentation in JSNonDestructibleProxy.h.
Mark Lam
Reported
2019-09-19 09:53:11 PDT
...
Attachments
proposed patch.
(6.65 KB, patch)
2019-09-19 09:56 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2019-09-19 09:56:26 PDT
Created
attachment 379139
[details]
proposed patch.
Saam Barati
Comment 2
2019-09-19 10:13:54 PDT
Comment on
attachment 379139
[details]
proposed patch. I thought we tried to avoid changes like this, even when the prior code didn't conform to WK style?
Mark Lam
Comment 3
2019-09-19 10:37:41 PDT
We do do these kinds of refactoring as a separate patch. For example, see: 2014:
https://trac.webkit.org/r173269
many files
https://trac.webkit.org/r171606
PropertyNameArray.h
https://trac.webkit.org/r166278
Heap.h 2013:
https://trac.webkit.org/r143171
JSGlobalObject.h and JSGlobalObjectFunctions.h
Mark Lam
Comment 4
2019-09-19 10:59:31 PDT
Comment on
attachment 379139
[details]
proposed patch. Thanks for the review.
WebKit Commit Bot
Comment 5
2019-09-19 12:02:12 PDT
Comment on
attachment 379139
[details]
proposed patch. Clearing flags on attachment: 379139 Committed
r250099
: <
https://trac.webkit.org/changeset/250099
>
WebKit Commit Bot
Comment 6
2019-09-19 12:02:13 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-09-19 12:03:20 PDT
<
rdar://problem/55528429
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug