Refactoring: fix broken indentation in JSNonDestructibleProxy.h. https://bugs.webkit.org/show_bug.cgi?id=201989

Reviewed by Saam Barati.

This patch only unindent the code to get it back to compliant formatting.
There is no actual code change.

* runtime/JSNonDestructibleProxy.h:
(JSC::JSNonDestructibleProxy::subspaceFor):
(JSC::JSNonDestructibleProxy::create):
(JSC::JSNonDestructibleProxy::createStructure):
(JSC::JSNonDestructibleProxy::JSNonDestructibleProxy):


Canonical link: https://commits.webkit.org/215614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250099 268f45cc-cd09-0410-ab3c-d52691b4dbfc